[package]
name = "adventofcode-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combinations = "0.1.0"
dialoguer = "0.11.0"
fancy-regex = "0.10.0"
itertools = "0.10.5"
md5 = "0.7.0"
regex = "1.6.0"
serde_json = "1.0.87"
